# view_counter

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/shared/: CMakeLists.txt  ViewCounter.cpp  ViewCounter.hpp
test/: CMakeLists.txt  test.cpp
